# parrot_v1

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lifecycle_nodes_example/: CMakeLists.txt  package.xml
log/: latest_build
parrot_cv_model/: package.xml  setup.cfg  setup.py
parrot_v1_bringup/: CMakeLists.txt  package.xml
parrot_v1_bringup/launch/: parrot_v1_controller.launch.py  parrot_v1_gazebo_controller.launch.xml  parrot_v1_sim.launch.xml  parrot_v1_sim_gazebo.launch.xml
parrot_v1_bringup/worlds/: test_world.world
parrot_v1_comms_test/: package.xml  setup.cfg  setup.py
parrot_v1_comms_test/parrot_v1_comms_test/: addints.py
parrot_v1_controller/: CMakeLists.txt  package.xml
parrot_v1_controller/config/: parrot_v1_controller.yaml
parrot_v1_description/: CMakeLists.txt  package.xml
parrot_v1_description/meshes/: base_parrot.dae  dynamic_gripper_parrot.dae  joint_1_parrot.dae  joint_2_parrot.dae  joint_3_parrot.dae  joint_4_parrot.dae  parrot_test.dae  static_gripper_parrot.dae
parrot_v1_description/meshes/stl_parrot/: Linear_gear.stl  Mount.stl  base_parrot.stl  gripper_dynamic_parrot.stl  joint_1_parrot.stl  joint_2_parrot.stl  (+1 more)
parrot_v1_description/rviz/: parrot_v1_sim.rviz  parrot_v1_sim_2.rviz
parrot_v1_description/urdf/: common_properties.urdf.xacro  parrot_v1.urdf  parrot_v1.urdf.xacro  parrot_v1_control.xacro  parrot_v1_gazebo.urdf.xacro  parrot_v1_main.urdf.xacro
parrot_v1_examples/: package.xml  setup.cfg  setup.py
parrot_v1_examples/parrot_v1_examples/: simple_action_client.py  simple_action_server.py
parrot_v1_firmware/: CMakeLists.txt  package.xml
parrot_v1_firmware/parrot_v1_firmware/: simple_serial_receiver.py  simple_serial_transmitter.py
parrot_v1_firmware/src/: simple_serial_transmitter.cpp
parrot_v1_moveit/: CMakeLists.txt  package.xml
parrot_v1_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  parrot_v1.srdf  pilz_cartesian_limits.yaml
parrot_v1_moveit/launch/: moveit.launch.py
parrot_v1_msgs/: CMakeLists.txt  package.xml
parrot_v1_msgs/srv/: EulerToQuaternion.srv  QuaternionToEuler.srv
parrot_v1_utils/: CMakeLists.txt
parrot_v1_utils/parrot_v1_utils/: angle_converter.py
(+306 files in other folders)
